Lots of changes...

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -12,12 +12,12 @@ html, body {
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 40px;
 }
 
 .App-header {
   background-color: #9370DB;
-  height: 140px;
+  height: 50px;
   color: white;
 }
 
@@ -28,4 +28,66 @@ html, body {
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.inlineHeader {
+  font-size: 1.1em;
+  display: inline-block;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+}
+
+.navList {
+  list-style: none;
+  /*display: inline-block;*/
+  height: 100%;
+  margin-bottom: 0;
+  display: inline-flex;
+    display: -ms-flexbox;
+    flex: 1;
+    -ms-flex: 1
+}
+
+.navList li {
+  /*background-color: #835AD6;*/
+  display: inline-block;
+  height: 100%;
+}
+
+.navList a {
+  display: table;
+  height: 100%;
+  line-height: 100%;
+  padding: 10px;
+  color: #fff;
+  vertical-align: middle;
+}
+
+.navList a:hover {
+  /*background-color: #7243d0;*/
+  color: white;
+  text-decoration: none;
+}
+
+.navList a.selected {
+  /*background-color: #7243d0;*/
+  /*border-color: white;
+  border-width: 0 1px 0 1px;
+  border-style: solid;*/
+}
+
+.linkContent {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.headerContentContainer {
+  height: 100%;
+  width: 100%;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
