--- a/src/components/ConfigurationItem/ConfigurationItem.css
+++ b/src/components/ConfigurationItem/ConfigurationItem.css
@@ -11,11 +11,24 @@
     padding: 0;
 }
 
-.description {
+input.itemName {
+    width: 100%;
+}
+
+div.description {
     font-size: .7em;
     margin: 3px;
     width: 100%;
     color: #414141;
+}
+
+textarea.description {
+    width: 100%;
+}
+
+textarea.value {
+    width: 100%;
+    height: 110px;
 }
 
 .configurationItem {
@@ -28,4 +41,20 @@
 .configurationItem a {
     text-decoration: none;
     outline: none;
+}
+
+.cancel {
+    float: left;
+}
+
+.update {
+    float: right;
+}
+
+.buttonContainer {
+   overflow: hidden;
+}
+
+.editLink {
+    display: block;
 }
