--- a/src/components/ListConfigurationItem/ListConfigurationItem.css
+++ b/src/components/ListConfigurationItem/ListConfigurationItem.css
@@ -9,8 +9,10 @@
     margin: 1px;
 }
 
- textarea {
-    width: 100%;
+ .listConfigurationItem textarea {
+    /* width: 100%; */
+    min-width: 100%;
+    max-width: 100%;
     height: 26px;
 }
 
