Hack to fix bootstrap navbar-fixed-top issue...

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,6 +6,14 @@ body {
   padding-top: 55px;
 }
 
+
+/*Hack to fix bootstrap navbar-fixed-top issue...*/
+@media (min-width: 768px) and (max-width: 991px)  {
+  body {
+    padding-top: 105px;
+  }
+}
+
 .App {
   /*text-align: center;
   font-family: Roboto,Arial,Helvetica,sans-serif;*/
